[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Art Assets/Human/Pilot_idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art Assets/Human/Pilot_walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Player/Human/HumanController.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/Player/Human/HumanStateMachine.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/Player/Human/States/PlayerIdle.gd" type="Script" id=5]
[ext_resource path="res://Assets/Scripts/Player/Human/States/PlayerWalk.gd" type="Script" id=6]
[ext_resource path="res://Assets/Scripts/Player/Human/States/PlayerJump.gd" type="Script" id=7]
[ext_resource path="res://Assets/Prefab/Grapple.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Scripts/Player/Human/States/PlayerGrappling.gd" type="Script" id=9]
[ext_resource path="res://Assets/Scripts/Utility/Hitbox.gd" type="Script" id=10]
[ext_resource path="res://Assets/Scripts/Player/Human/HumanActivateArea.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 20 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/AnimationSprites/Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/AnimationSprites/Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/AnimationSprites/Walk:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.34
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/AnimationSprites/Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.5, 10 )

[node name="Human" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )
speed = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 4 )
state_scripts = [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ) ]
debugging = true
start_state = "Idle"

[node name="Body" type="Node2D" parent="."]

[node name="AnimationSprites" type="Node2D" parent="Body"]

[node name="Idle" type="Sprite" parent="Body/AnimationSprites"]
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 1
region_rect = Rect2( 16, 10, 32, 42 )

[node name="Walk" type="Sprite" parent="Body/AnimationSprites"]
visible = false
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="hitbox" type="Area2D" parent="Body"]
collision_layer = 2
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/hitbox"]
position = Vector2( -1.5, 0 )
shape = SubResource( 1 )

[node name="launchPoint" type="Position2D" parent="Body"]
position = Vector2( 5.48, 2.721 )

[node name="Raycasts" type="Node2D" parent="Body"]

[node name="FloorRaycast" type="RayCast2D" parent="Body/Raycasts"]
position = Vector2( -10, 21 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="InteractArea" type="Area2D" parent="Body"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/InteractArea"]
position = Vector2( 9.5, 0 )
shape = SubResource( 5 )

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Grapple" parent="." instance=ExtResource( 8 )]

[connection signal="area_entered" from="Body/InteractArea" to="Body/InteractArea" method="area_entered"]
[connection signal="area_exited" from="Body/InteractArea" to="Body/InteractArea" method="area_exited"]
